Set up PlatformIO for ESP32 and ODrive CAN projects
- Added VS Code configuration for recommended extensions.
- Created SETUP.md for detailed setup instructions for PlatformIO and ESP32.
- Implemented ODrive CAN communication library with comprehensive command handling.
- Configured platformio.ini for ESP32 development environment.
- Developed main application logic for initializing and controlling ODrive motors via CAN.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,10 @@
 {
-    "files.associations": {
-        "*.css": "tailwindcss",
-        "cstdint": "cpp",
-        "array": "cpp",
-        "string": "cpp",
-        "string_view": "cpp",
-        "ranges": "cpp",
-        "span": "cpp",
-        "compare": "cpp"
-    }
+  // Tell IntelliSense to use PlatformIO's provider
+  "C_Cpp.default.configurationProvider": "platformio.platformio-ide",
+
+  // Optional: stop VS Code from nagging about intellisense errors
+  "C_Cpp.errorSquiggles": "enabled",
+
+  // Always format on save (your preference)
+  "editor.formatOnSave": true
 }
