Update platformio configuration and main.cpp for ESP32-S3 support
- Changed environment from esp32dev to esp32s3 in platformio.ini.
- Updated board to esp32-s3-devkitc-1.
- Set upload speed to 921600 and monitor speed to 115200.
- Added build flags for Ethernet PHY configuration.
- Modified TWAI initialization pins in main.cpp from GPIO 5 and 4 to GPIO 43 and 44.

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,8 +1,15 @@
-[env:esp32dev]                ; or your actual board
+[env:esp32s3]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
+
+upload_speed = 921600
 monitor_speed = 115200
+
 build_flags =
   -D ESP_PLATFORM
   -D ARDUINO_ARCH_ESP32
+  -D ETH_PHY_TYPE=LAN8720
+  -D ETH_PHY_ADDR=1
+  -D ETH_PHY_POWER=5
+  -D ETH_CLK_MODE=ETH_CLOCK_GPIO17_OUT
