--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ build_flags =
   -D ETH_PHY_ADDR=1
   -D ETH_PHY_POWER=5
   -D ETH_CLK_MODE=ETH_CLOCK_GPIO17_OUT
+  -D ARDUINO_USB_CDC_ON_BOOT=1
+  -D ARDUINO_USB_MODE=1
