--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,14 @@ platform = espressif32
 board = esp32-s3-devkitm-1
 framework = arduino
 lib_deps = handmade0octopus/ESP32-TWAI-CAN@^1.0.1
+monitor_speed = 115200        ; match Serial.begin baud
+monitor_port  = COM3          ; COM port of esp (only if auto-detect fails)
+upload_port   = COM3          ; COM port of esp (only if auto-detect fails)
+
+monitor_filters =
+    esp32_exception_decoder
+    send_on_enter
+
+build_flags =
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -D ARDUINO_USB_MODE=1
